# chirality-runtime

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE.md  Makefile  README.md
crates/chirality-adapters/: Cargo.toml
crates/chirality-adapters/src/: lib.rs
crates/chirality-api/: Cargo.toml
crates/chirality-api/src/: main.rs
crates/chirality-app/: Cargo.toml
crates/chirality-app/src/: lib.rs
crates/chirality-domain/: Cargo.toml
crates/chirality-domain/src/: brief_parser.rs  error.rs  lib.rs  state_machines.rs  write_guard.rs
crates/chirality-domain/src/entities/: deliverable.rs  document.rs  ids.rs  mod.rs  package.rs  project.rs  session.rs
crates/chirality-ports/: Cargo.toml
crates/chirality-ports/src/: agent_executor.rs  blob_store.rs  error.rs  git.rs  identity.rs  lib.rs  workspace.rs
