[package]
name = "chirality-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP API server for chirality-runtime"

[dependencies]
chirality-domain = { workspace = true }
chirality-ports = { workspace = true }
chirality-adapters = { workspace = true }
chirality-app = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
