[package]
name = "chirality-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Application services for chirality-runtime"

[dependencies]
chirality-domain = { workspace = true }
chirality-ports = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
