[package]
name = "chirality-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure domain core for chirality-runtime"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
